# hiking-trails

./: .gitignore  README.md  package.json  pyproject.toml
.github/workflows/: coverage.yml  pylint.yml
src/backend/: README.md  main.py  pyproject.toml
src/backend/app/: main.py
src/backend/app/api/: index.py  uploadGPX.py  upload_gpx.py
src/backend/db/: database.py
src/backend/tests/: test_main.py
