[tool.poetry]
name = "app"
version = "0.1.0"
description = "App to track closed hiking trails"
authors = ["Bruno Faigle-Cedzich"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
SQLAlchemy = "^2.0.32"
python-multipart = "^0.0.9"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
